# tree-sitter-rpmspec

./: .clang-format  .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  DESIGN.md  Makefile  NEOVIM.md  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rpmspec/: binding.c
cmake/Modules/: FindTreeSitter.cmake  TSAddParserLibrary.cmake  TSFuzzDictionary.cmake
neovim/queries/rpmbash/: highlights.scm  injections.scm
neovim/queries/rpmspec/: highlights.scm  injections.scm
queries/: highlights.scm  injections.scm
rpmbash/: CMakeLists.txt  DESIGN.md  grammar.js  package-lock.json  package.json
rpmbash/queries/: highlights.scm  injections.scm
rpmbash/src/: grammar.json  node-types.json  scanner.c
rpmbash/test/corpus/: conditionals.txt  macro_expansion.txt  prep_macros.txt
rpmspec/: .tsqueryrc.json  CMakeLists.txt  grammar.js
rpmspec/queries/: highlights.scm  injections.scm
rpmspec/src/: grammar.json  node-types.json  scanner.c
rpmspec/test/corpus/: build_system.txt  changelog.txt  conditionals.txt  dependencies_basic.txt  dependencies_boolean.txt  dependencies_boolean_advanced.txt  dependencies_elf.txt  dependencies_list.txt  dependencies_macros.txt  dependencies_path.txt  dependencies_qualifiers.txt  dependencies_tags.txt  dependency_types.txt  description.txt  escaped_percent.txt  file_trigger.txt  files.txt  macro_builtin_multi_arg.txt  macro_builtin_path.txt  macro_builtin_standalone.txt  macro_builtin_string.txt  macro_builtin_url.txt  macro_expansion.txt  macro_expression.txt  macro_functions.txt  macro_parametric_expansion.txt  macro_simple_expansion.txt  patchlist.txt  preamble.txt  runtime_scriptlets.txt  script_content.txt  scriptlets_build.txt  scriptlets_check.txt  scriptlets_clean.txt  scriptlets_conf.txt  scriptlets_generate_buildrequires.txt  scriptlets_install.txt  scriptlets_prep.txt  sourcelist.txt  strings.txt  (+3 more)
scripts/: annotate-fuzzer-output.py  extract-fuzz-corpus.py  regenerate-fuzz-corpus.sh  ts-extract-fuzz-corpus.py  update-test-ast.py
src/: grammar.json  node-types.json  scanner.c
test/corpus/: build_system.txt  changelog.txt  conditionals.txt  dependencies_basic.txt  dependencies_boolean.txt  dependencies_boolean_advanced.txt  dependencies_elf.txt  dependencies_list.txt  dependencies_macros.txt  dependencies_path.txt  dependencies_qualifiers.txt  dependencies_tags.txt  dependency_types.txt  description.txt  escaped_percent.txt  file_trigger.txt  files.txt  macro_builtin_multi_arg.txt  macro_builtin_path.txt  macro_builtin_string.txt  macro_builtins.txt  macro_expansion.txt  macro_expression.txt  macro_functions.txt  macro_parametric_expansion.txt  macro_script_code.txt  macro_shell_expansion.txt  macro_simple_expansion.txt  macros.txt  patchlist.txt  preamble.txt  preamble_dependencies.txt  runtime_scriptlets.txt  script_content.txt  scriptlets.txt  scriptlets_build.txt  scriptlets_check.txt  scriptlets_clean.txt  scriptlets_conf.txt  scriptlets_generate_buildrequires.txt  (+8 more)
tests/fuzz/: .gitignore  CMakeLists.txt  README.md  fuzzer.c
tests/fuzz/corpus/rpmbash/: conditionals_001_.sh  conditionals_002_.sh  conditionals_003_.sh  conditionals_004_.sh  conditionals_005_.sh  conditionals_006_.sh  conditionals_007_.sh  conditionals_008_.sh  conditionals_009_.sh  conditionals_010_.sh  conditionals_011_.sh  conditionals_012_.sh  macro_expansion_001_.sh  macro_expansion_002_.sh  macro_expansion_003_.sh  macro_expansion_004_.sh  macro_expansion_005_.sh  macro_expansion_006_.sh  macro_expansion_007_.sh  macro_expansion_008_.sh  macro_expansion_009_.sh  macro_expansion_010_.sh  macro_expansion_011_.sh  macro_expansion_012_.sh  macro_expansion_013_.sh  macro_expansion_014_.sh  macro_expansion_016_.sh  macro_expansion_017_.sh  macro_expansion_018_.sh  macro_expansion_019_.sh  macro_expansion_020_.sh  macro_expansion_021_.sh  macro_expansion_022_.sh  macro_expansion_023_.sh  prep_macros_001_.sh  prep_macros_002_.sh  prep_macros_003_.sh  prep_macros_004_.sh  prep_macros_005_.sh  prep_macros_006_.sh
tests/fuzz/corpus/rpmspec/: build_system_001_.spec  build_system_002_.spec  build_system_003_.spec  build_system_004_.spec  build_system_005_.spec  build_system_006_.spec  build_system_007_.spec  build_system_008_.spec  build_system_009_.spec  build_system_010_.spec  changelog_002_.spec  changelog_003_.spec  changelog_004_.spec  changelog_005_.spec  changelog_006_.spec  changelog_007_.spec  comment_002_.spec  comment_003_.spec  conditionals_001_.spec  conditionals_002_.spec  conditionals_003_.spec  conditionals_004_.spec  conditionals_005_.spec  conditionals_006_.spec  conditionals_007_.spec  conditionals_008_.spec  conditionals_009_.spec  conditionals_010_.spec  conditionals_011_.spec  conditionals_012_.spec  conditionals_013_.spec  conditionals_014_.spec  conditionals_015_.spec  conditionals_016_.spec  conditionals_017_.spec  conditionals_018_.spec  conditionals_019_.spec  conditionals_020_.spec  conditionals_021_.spec  conditionals_022_.spec  (+400 more)
